--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -24,7 +24,7 @@
 
   <p>OMG I found the <em>CUTEST</em> puppy! Check it out!</p>
   <p>
-    <img src="img/2959326615_af04f9878a_z.jpg" alt="an image of an adorable
+    <img src="img/2959326615_af04f9878a_z.jpg" alt="a image|picture of an adorable
     puppy in Antarctica named Blizzard">
   </p>
   <p>This picture is <cite>"Bizzard, the pup", by Frank Harvey. From the <a href="https://www.flickr.com/photos/statelibraryofnsw/2959326615/">State Library of NSW</a></cite>.</p>
@@ -35,15 +35,14 @@
   <form>
     <h2>Leave a comment</h2>
     <div>
-      Email: <label for="email_input"><input type="email" id="email_input"
-      name="email" placeholder="email@domain.com"></label>
-      Password: <label for="password_input"><input type="password"
-        id="password_input" name="password"></label>
+      <label for="email_input">Email:</label>
+            <input type="email" id="email_input" name="email" placeholder="email@domain.com">
+      <label for="password_input">Password:</label>
+       <input type="password" id="password_input" name="password">
     </div>
     <div>
-      Comment:
-      <label for="comment_field"><textarea class="form-control"
-      id="comment_field" name="comment"></textarea></label>
+      <label for="comment_field">Comment:</label>
+      <textarea class="form-control" id="comment_field" name="comment"></textarea>
     </div>
     <button type="submit"><i class="fas fa-pencil-alt" aria-label="Submit">
     </i></button>
