--- a/problem-c/index.html
+++ b/problem-c/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8">
     <title>Top 5 List</title>
-    
+
     <!-- include required fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<h1> Top 5 Songs For Helen </h1>
+<table>
+  <thead>
+    <tr>
+      <th scope="col">Rank</th>
+      <th scope="col">Artist</th>
+      <th scope="col">Title</th>
+      <th scope="col">Album</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td> Jackson Wang, Rich Brian </td>
+      <td> Titanic </td>
+      <td><a href="https://www.youtube.com/watch?v=HKCmh9Q0jZg" target="_blank">
+        <img src="img/Mirrors_album.jpg" alt="image of the Mirrors album">
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td> Gavin James </td>
+    <td> Nervous </td>
+    <td><a href="https://www.youtube.com/watch?v=mAxpawLGPQM" target="_blank">
+      <img src="img/nervous.jpg" alt="image of the Bitter Pill album">
+    </a>
+  </td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td> Lil Mosey </td>
+    <td> Blueberry Faygo </td>
+    <td><a href="https://www.youtube.com/watch?v=V_jHc_n0p9c" target="_blank">
+      <img src="img/blueberry.jpg" alt="image of the Blueberry Faygo single">
+    </a>
+  </td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td> BLACKPINK </td>
+    <td> WHISTLE </td>
+    <td><a href="https://www.youtube.com/watch?v=dISNgvVpWlo" target="_blank">
+      <img src="img/square_one.jpg" alt="image of the BLACKPINK IN YOUR AREA album">
+    </a>
+  </td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td> keshi </td>
+    <td> 2 soon </td>
+    <td><a href="https://www.youtube.com/watch?v=6P_w0adSpYU" target="_blank">
+      <img src="img/2soon.jpg" alt="image of the 2 soon single">
+    </a>
+  </td>
+  </tr>
+  </tbody>
+</table>
 
-
-</body>
 </html>
