Fixed linter errors for problem c

--- a/problem-c/index.html
+++ b/problem-c/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<h1> Top 5 Songs For Helen </h1>
+<body>
+<h1>Top 5 Songs For Helen</h1>
 <table>
   <thead>
     <tr>
@@ -24,8 +25,7 @@
       <td> Jackson Wang, Rich Brian </td>
       <td> Titanic </td>
       <td><a href="https://www.youtube.com/watch?v=HKCmh9Q0jZg" target="_blank">
-        <img src="img/Mirrors_album.jpg" alt="image of the Mirrors album">
-      </a>
+        <img src="img/Mirrors_album.jpg" alt="image of the Mirrors album"></a>
     </td>
   </tr>
   <tr>
@@ -66,5 +66,5 @@
   </tr>
   </tbody>
 </table>
-
+</body>
 </html>
