Fixed linter problems for problem d

--- a/problem-d/index.html
+++ b/problem-d/index.html
@@ -14,8 +14,8 @@
 <body>
     <nav>
         <ul>
-          <span class="logo">&nbsp;</span>
-            <li><a class="nav-link" href="#">Informatics</a></li>
+            <li><a class="nav-link" href="#"><span class="logo" aria-hidden="true">&nbsp;</span>
+              Informatics</a></li>
             <li><a class="nav-link" href="#courses">Courses</a></li>
             <li><a class="nav-link" href="#admissions">Admissions</a></li>
             <li><a class="nav-link" href="#faculty">Faculty</a></li>
